K8S/task-service-depl-np.yml
apiVersion: v1
kind: Service
metadata: 
  name:  task-service-srv
spec:
  type: NodePort
  selector: 
    app: task-service
  ports:
    - name: task-service
      protocol: TCP
      port: 80
      targetPort: 8080
